todo_app/manifests/middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-app-prefix
  namespace: project
spec:
  stripPrefix:
    prefixes:
      - /app
