todo_app/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      dnsPolicy: "None"
      dnsConfig:
        nameservers:
          - 8.8.8.8
          - 1.1.1.1
      volumes:
        - name: image-cache
          persistentVolumeClaim:
            claimName: todo-image-pvc
      containers:
        - name: todo-app
          image: rdmon14/todo_app:v19 # Sube una versión nueva
          volumeMounts:
            - name: image-cache
              mountPath: /usr/src/app/files
